--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,52 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-nav {
-	overflow-x: hidden;
-}
+
 body {
-	padding: 0 !important;
-	margin: 0 !important;
-	box-sizing: border-box !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    box-sizing: border-box !important;
 }
 
-.page {
-	@apply min-h-screen;
-}
-.page section {
-	@apply px-12;
-}
-.home > section {
-	background-image: url('./assets/home/BG\ ImageHome.png');
-}
-.project {
-	background-color: #0b070672;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: Montserrat;
 }
 
-.Donate {
-	background-color: rgba(0, 0, 0, 0.445);
+p,
+a {
+    font-family: Manjari;
+    line-height: 1.8;
 }
-.homeimg {
-	width: 100vw !important ;
+
+@keyframes scroll {
+    0% {
+        left: 0;
+    }
+    5% {
+        left: -5%;
+    }
+    30% {
+        left: -30%;
+    }
+    50% {
+        left: -50%;
+    }
+    80% {
+        left: -80%;
+    }
+    100% {
+        left: -100%;
+    }
 }
-#HomeSection {
-	background-image: url('./assets/home/BG ImageHome.png');
-	background-size: cover;
+
+.animate {
+    animation: scroll 60s linear infinite;
+}
+.animate:hover {
+    animation-play-state: paused;
 }
