update: integrated career, consultancy and funding-opportunities with api

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ a {
     line-height: 1.8;
 }
 
+#content * {
+    font-family: Manjari;
+}
+
 #content p {
     margin-top: 20px;
     margin-bottom: 20px;
