--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,8 @@ a {
 .animate:hover {
     animation-play-state: paused;
 }
+.mySwiper {
+    --swiper-navigation-size: 40px;
+    --swiper-navigation-sides-offset: 20px;
+    --swiper-navigation-color: #ffffff;
+}
