--- a/src/index.css
+++ b/src/index.css
@@ -204,7 +204,45 @@ a {
     margin-top: -6px;
 }
 
-.react-images__view-image--isModal {
- display: inline-block;
- left: 50%
+.Example__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 0;
+    padding: 10px;
+}
+
+.Example__container__load {
+    margin-top: 1em;
+    color: white;
+}
+
+.Example__container__document {
+    margin: 0.5em 0;
+}
+
+.Example__container__document .react-pdf__Document {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Example__container__document .react-pdf__Page {
+    max-width: calc(100% - 2em);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+    margin: 0.5em;
+}
+
+.Example__container__document .react-pdf__Page canvas {
+    max-width: 100%;
+    height: auto !important;
+}
+
+.Example__container__document .react-pdf__message {
+    padding: 20px;
+    color: white;
+}
+
+.Example__container__document .react-pdf__Page__textContent {
+    display: none;
 }
