Updated news UI

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body {
     padding: 0 !important;
     margin: 0 !important;
     box-sizing: border-box !important;
+    background-color: #fcfcfc;
 }
 
 h1,
